@@ -1,4 +1,4 @@
-# Copyright (C) 2003-2007 Nominum, Inc.
+# Copyright (C) 2003-2009 Nominum, Inc.
 #
 # Permission to use, copy, modify, and distribute this software and its
 # documentation for any purpose with or without fee is hereby granted,
@@ -18,6 +18,7 @@
 __all__ = [
     'dnssec',
     'e164',
+    'edns',
     'entropy',
     'exception',
     'flags',
